# bazar-offchain

./: .gitignore  Dockerfile  README.md  alembic.ini  application.py  pyproject.toml  requirements.txt  start.sh
.ebextensions/: python.config
src/application/company/: avatar_uc.py  company_uc.py  product_uc.py
src/application/product/: product_uc.py
tests/: generic_entities_test.py  interface_test.py  utils.py
tests/avatar_test/: avatar_entities_test.py  avatar_interface_test.py  avatar_resources_test.py
tests/basic_product_test/: basic_product_entities_test.py  basic_product_resources_test.py
tests/company_test/: company_entities_test.py  company_interface_test.py  company_resources_test.py
tests/incoterm_test/: incoterm_entities_test.py  incoterm_resources_test.py
tests/minimum_order_test/: minimum_order_entities_test.py
tests/product_test/: order_entities_test.py  product_entities_test.py  product_interface_test.py  product_resources_test.py
tests/product_type_test/: product_type_entities_test.py  product_type_resources_test.py
tests/sustainability_certifications_test/: sustainability_certifications_entities_test.py  sustainability_certifications_resources_test.py
tests/user_manage_test/: user_interface_test.py  user_manage_entities_test.py  user_manage_resources_test.py
tests/user_test/: user_entities_test.py  user_resources_test.py
tests/variety_test/: variety_entities_test.py  variety_resources_test.py
tests/wishlist_test/: wishlist_entities_test.py  wishlist_interface_test.py  wishlist_resources_test.py
(+88 files in other folders)
