[tool.poetry]
name = "bazar-offchain"
version = "0.1.0"
description = ""
authors = ["daviidco <pcordoba@cafetosoftware.com>"]
readme = "README.md"
packages = [{include = "bazar_offchain"}]

[tool.poetry.dependencies]
python = "3.8.6"
alembic = "1.8.1"
aniso8601 = "9.0.1"
asyncpg = "0.26.0"
attrs = "22.1.0"
boto3 = "1.24.88"
botocore = "1.27.88"
certifi = "2022.9.24"
charset-normalizer = "2.1.1"
click = "8.1.3"
databases = "0.6.1"
ecdsa = "0.18.0"
flask = "2.1.3"
flask-cors = "3.0.10"
flask-migrate = "3.1.0"
flask-restx = "0.5.1"
flask-sqlalchemy = "2.5.1"
greenlet = "1.1.3"
idna = "3.4"
importlib-metadata = "5.0.0"
importlib-resources = "5.9.0"
inject = "4.3.1"
itsdangerous = "2.1.2"
jinja2 = "3.1.2"
jmespath = "1.0.1"
jsonschema = "4.16.0"
mako = "1.2.3"
markupsafe = "2.1.1"
pkgutil-resolve-name = "1.3.10"
psycopg2-binary = "2.9.3"
pyasn1 = "0.4.8"
pydantic = "1.10.2"
pyrsistent = "0.18.1"
python-dateutil = "2.8.2"
python-dotenv = "0.21.0"
python-jose = "3.3.0"
pytz = "2022.4"
requests = "2.28.1"
rsa = "4.9"
s3transfer = "0.6.0"
six = "1.16.0"
sqlalchemy = "1.4.41"
sqlalchemy-utils = "0.38.3"
typing-extensions = "4.3.0"
urllib3 = "1.26.12"
werkzeug = "2.1.2"
zipp = "3.8.1"
gunicorn = "^20.1.0"
pytest = "^7.2.0"
coverage = "^6.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
